<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:adjustViewBounds="false"
        android:contentDescription="@string/content_description_product_image"
        android:onClick="dispatchTakePictureIntent"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_camera" />


    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="number" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/initial_inventory"
        android:inputType="number"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vendor_email_address"
        android:inputType="textEmailAddress"

        />


</LinearLayout>